<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="Boton 1"
        tools:layout_editor_absoluteX="39dp"
        tools:layout_editor_absoluteY="16dp" />


    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="Boton 2"
        tools:layout_editor_absoluteX="161dp"
        tools:layout_editor_absoluteY="16dp" />

    <EditText
        android:id="@+id/EditTextName"
        android:layout_width="353dp"
        android:layout_height="39dp"
        android:hint="@string/feedbackname"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="38dp"
        tools:layout_editor_absoluteY="144dp" />

    <CheckBox
        android:id="@+id/fiebre"
        android:layout_width="333dp"
        android:layout_height="33dp"
        android:text="@string/fiebre"
        tools:layout_editor_absoluteX="39dp"
        tools:layout_editor_absoluteY="249dp"></CheckBox>

    <CheckBox
        android:id="@+id/resfriado"
        android:layout_width="333dp"
        android:layout_height="33dp"
        android:text="@string/resfriado"
        tools:layout_editor_absoluteX="38dp"
        tools:layout_editor_absoluteY="283dp"></CheckBox

    <CheckBox
        android:id="@+id/dolorMuscular"
        android:layout_width="333dp"
        android:layout_height="33dp"
        android:text="@string/dolorMuscular"
        tools:layout_editor_absoluteX="39dp"
        tools:layout_editor_absoluteY="316dp"></CheckBox

    <CheckBox
        android:id="@+id/dolorCabeza"
        android:layout_width="333dp"
        android:layout_height="33dp"
        android:text="@string/dolorCabeza"
        tools:layout_editor_absoluteX="39dp"
        tools:layout_editor_absoluteY="415dp"></CheckBox

    <CheckBox
        android:id="@+id/dolorGarganta"
        android:layout_width="333dp"
        android:layout_height="33dp"
        android:text="@string/dolorGarganta"
        tools:layout_editor_absoluteX="39dp"
        tools:layout_editor_absoluteY="382dp"></CheckBox

    <CheckBox
        android:id="@+id/sabor"
        android:layout_width="333dp"
        android:layout_height="33dp"
        android:text="@string/sabor"
        tools:layout_editor_absoluteX="39dp"
        tools:layout_editor_absoluteY="349dp"></CheckBox

    <Button
        android:id="@+id/send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="Enviar"
        tools:layout_editor_absoluteX="161dp"
        tools:layout_editor_absoluteY="519dp" />

    <TextView
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="196dp"
        android:text="¿Qué sintomas presenta?"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>